Agregado Tables en Socios

--- a/html/index.html
+++ b/html/index.html
@@ -20,14 +20,14 @@
     <div class="container-fluid w-100 container-style">
         <div class="row align-items-center headline">
             <div class="col col-md-2 w-25">
-                <img class="img-fluid"src="../images/logo.png" alt="Logo Sr Cobranza">
+                <img class="img-fluid"src="../assest/images/logo.png" alt="Logo Sr Cobranza">
             </div>
             <div class="col col-md-8 w-75">
                 <p class="text-center title">Sr Cobranza</p>
             </div>
             <div class="col col-md-2 w-25">
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#ModalLoginForm">
-                    <img src="../images/login.svg" alt="" width="32" height="32" title="ENTRAR">
+                    <img src="../assest/images/login.svg" alt="" width="32" height="32" title="ENTRAR">
                 </button>
             </div>
         </div>
@@ -45,35 +45,35 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/cob01.jpg" class="d-block w-100" alt="...">
+                    <img src="../assest/images/cob01.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="text-ligth">Convicción</h3>
                         <p class="text-ligth">La fuerza que nos caracteriza y nos impulsa.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/cob02.jpg" class="d-block w-100" alt="...">
+                    <img src="../assest/images/cob02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="text-dark">Simpleza</h3>
                         <p class="text-dark">Nuestros servicios son sencillos, para Uds. y su Cliente.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/cob03.jpg" class="d-block w-100" alt="...">
+                    <img src="../assest/images/cob03.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="text-dark">Costos</h3>
                         <p class="text-dark">El valor exacto de nuestros servicio y el costo justo para su Empresa.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/cob04.jpg" class="d-block w-100" alt="...">
+                    <img src="../assest/images/cob04.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="text-dark">Medios de Pago</h3>
                         <p class="text-dark">La Multiplicidad de opciones para realizar sus cobros nos caracteriza.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/cob05.jpg" class="d-block w-100" alt="...">
+                    <img src="../assest/images/cob05.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="text-ligth">Casos de Exito</h3>
                         <p class="text-ligth">Una de las Entedidas que confian en Nosotros.</p>
