--- a/html/cobradores.html
+++ b/html/cobradores.html
@@ -22,7 +22,7 @@
             <div class="col col-md-10 w-100">
                 <nav class="navbar navbar-expand-md navbar-dark">
                     <a class="navbar-brand" href="#">
-                        <img class="logo" src="../images/logo.png" alt="Logo Sr Cobranza">
+                        <img class="logo" src="../assest/images/logo.png" alt="Logo Sr Cobranza">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -54,7 +54,7 @@
                             </li>
                             <form class=" my-2 my-lg-0" action="../html/index.html">
                                 <button class="btn btn-danger my-2 my-sm-0" type="submit">
-                                    <img src="../images/logout.svg" alt="SALIR" title="SALIR">
+                                    <img src="../assest/images/logout.svg" alt="SALIR" title="SALIR">
                                 </button>
                             </form>
                         </ul>
@@ -72,7 +72,7 @@
                     Apellido y Nombre
                 </div>
                 <p></p>
-                <img class="card-img-top card-imagen" src="../images/defaultsociomen.png" alt="Foto del Socio">
+                <img class="card-img-top card-imagen" src="../assest/images/defaultsociomen.png" alt="Foto del Socio">
                 <div class="card-body">
                     <h5 class="card-title card-title-style">Tipo de Socio</h5>
                     <p class="card-text card-text-style">Datos del Socios (Domicilio, Ciudad, Provincia, Pais, Estado Civil, Edad, Fecha de Nacimiento).</p>
@@ -85,7 +85,7 @@
                     Apellido y Nombre
                 </div>
                 <p></p>
-                <img class="card-img-top card-imagen" src="../images/defaultsociowomen.png" alt="Foto del Socio">
+                <img class="card-img-top card-imagen" src="../assest/images/defaultsociowomen.png" alt="Foto del Socio">
                 <div class="card-body">
                     <h5 class="card-title card-title-style">Tipo de Socio</h5>
                     <p class="card-text card-text-style">Datos del Socios (Domicilio, Ciudad, Provincia, Pais, Estado Civil, Edad, Fecha de Nacimiento).</p>
